update index config

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Hello world ี</title>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <h1>Hello i need help</h1>
   <p>GET IT</p>
   <p>Hello Github , with config</p>
 </body>
